--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:electron": "ng build --base-href . && cp -R src/desktop/* dist",
+    "electron": "npm run build:electron && electron dist/main.js"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +25,7 @@
     "@angular/router": "^4.2.4",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "electron": "^1.7.6",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
