Added electron live-reloading

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:electron": "ng build --base-href . && cp -R src/desktop/* dist",
-    "electron": "npm run build:electron && electron dist/main.js",
+    "build:electron:watch": "ng build --base-href . --watch",
+    "build:electron:entry": "tsc src/desktop/main.ts --outDir dist",
+    "electron": "npm run build:electron:entry && electron dist/main.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -37,6 +38,8 @@
     "bootstrap": "^4.0.0-alpha.6",
     "codelyzer": "~3.1.1",
     "electron": "^1.7.6",
+    "electron-prebuilt": "^1.4.13",
+    "electron-reload": "^1.2.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
