--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "ng serve",
     "build": "ng build",
     "build:electron:watch": "ng build --base-href . --watch",
-    "build:electron:entry": "tsc src/desktop/main.ts --outDir dist",
-    "electron": "npm run build:electron:entry && electron dist/main.js",
+    "build:electron:main": "tsc src/desktop/main.ts --outDir dist",
+    "electron": "npm run build:electron:main && electron dist/main.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
