--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/systeminformation": "^3.23.0",
     "bootstrap": "^4.0.0-alpha.6",
     "codelyzer": "~3.1.1",
     "electron": "^1.7.6",
@@ -49,6 +50,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "systeminformation": "^3.30.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
