--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:docs": "ng build --base-href . --prod --output-path docs",
     "build:electron": "ng build --base-href . --prod && npm run build:electron:main",
     "build:electron:watch": "ng build --base-href . --watch",
     "build:electron:main": "tsc src/electron/main.ts --outDir dist",
@@ -25,7 +26,9 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angularfire2": "^4.0.0-rc.2",
     "core-js": "^2.4.1",
+    "firebase": "^4.4.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
