--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "angularfire2": "^4.0.0-rc.2",
+    "angularfire2": "^5.0.0-rc.2",
     "core-js": "^2.4.1",
-    "firebase": "^4.4.0",
+    "firebase": "^4.5.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.4",
+    "@angular/cli": "^1.4.5",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
@@ -43,7 +43,6 @@
     "bootstrap": "^4.0.0-beta",
     "codelyzer": "~3.1.1",
     "electron": "^1.7.6",
-    "electron-prebuilt": "^1.4.13",
     "electron-reload": "^1.2.1",
     "font-awesome": "^4.7.0",
     "jasmine-core": "~2.6.2",
