--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bootstrap": "^4.0.0-beta",
     "codelyzer": "~3.1.1",
     "electron": "^1.7.6",
+    "electron-reload": "^1.2.2",
     "font-awesome": "^4.7.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
