--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^4.2.4",
     "angular2-flash-messages": "^1.0.8",
     "angularfire2": "^5.0.0-rc.3",
+    "circular-json": "^0.3.3",
     "core-js": "^2.4.1",
     "firebase": "^4.5.1",
     "rxjs": "^5.4.2",
@@ -37,6 +38,7 @@
     "@angular/cli": "^1.4.5",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
+    "@types/circular-json": "^0.1.31",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
