--- a/src/app/firebase.database.json
+++ b/src/app/firebase.database.json
@@ -44,7 +44,7 @@
         ".read": "auth !== null && auth.uid === $uid",
         ".write": "auth !== null && auth.uid === $uid",
         ".validate": "newData.child('access').val() === data.child('access').val()",
-        "access": { ".write": false },
+        // "access": { ".write": false },
       	"$other": { ".write": "auth !== null && auth.uid === $uid" }
       }
     }
