--- a/src/app/firebase.database.json
+++ b/src/app/firebase.database.json
@@ -49,4 +49,80 @@
       }
     }
   }
+
+  // default
+  /*
+  service cloud.firestore {
+    match /databases/{database}/documents {
+      match /{document=**} {
+        allow read, write;
+      }
+    }
+  }
+  */
+
+  // rules was working on but stopped
+  // because no simulator atm
+  /*
+  service cloud.firestore {
+    match /databases/{database}/documents {
+      function isAuthenticated() {
+        return request.auth != null;
+      }
+
+      function _getRoles() {
+        return get(/databases/$(database)/documents/users/$(request.auth.uid)).data.roles;
+      }
+
+      function isSub() {
+        return 1 in _getRoles();
+      }
+
+      function isMod() {
+        return 2 in _getRoles();
+      }
+
+      function isAdmin() {
+        return 3 in _getRoles();
+      }
+
+      function isOwner() {
+        return 4 in _getRoles();
+      }
+
+      // User Fields
+
+      // displayName, ip, platform,
+      // providers[](displayName, email, phoneNumber,
+      // photoURL, providerId, uid), roles[]
+
+      match /users/{userId} {
+        allow read: if request.auth.uid == userId;
+        // validation
+        allow write: if request.resource.data.size() == 5 &&
+                        request.resource.data.displayName is string &&
+                        request.resource.data.ip is string &&
+                        request.resource.data.platform is string &&
+                        request.resource.data.provider is map &&
+                        request.resource.data.provider.size() == 6 &&
+                          request.resource.data.provider.displayName is string &&
+                          request.resource.data.provider.email is string &&
+                          request.resource.data.provider.phoneNumber is string &&
+                          request.resource.data.provider.photoURL is string &&
+                          request.resource.data.provider.providerId is string &&
+                          request.resource.data.provider.uid is string;
+      }
+
+      match /roles/{roleId} {
+        allow read: if isAuthenticated();
+      }
+
+      match /rooms/{roomId} {
+        match /messages/{messageId} {
+          allow read, write: if isAuthenticated();
+        }
+      }
+    }
+  }
+  */
 }
