--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/circular-json": "^0.1.31",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.15",
     "@types/node": "~6.0.60",
     "@types/systeminformation": "^3.23.0",
     "bootstrap": "^4.0.0-beta",
