--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
+    "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
+    "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "angular2-flash-messages": "^1.0.8",
     "angularfire2": "^5.0.0-rc.3",
+    "circular-json": "^0.3.3",
     "core-js": "^2.4.1",
     "firebase": "^4.5.1",
     "rxjs": "^5.4.2",
@@ -37,6 +40,7 @@
     "@angular/cli": "^1.4.5",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
+    "@types/circular-json": "^0.1.31",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
