--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "circular-json": "^0.3.3",
     "core-js": "^2.4.1",
     "firebase": "^4.5.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
