--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "core-js": "^2.4.1",
     "firebase": "^4.5.1",
     "hammerjs": "^2.0.8",
+    "ng2-validation": "^4.2.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
