--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
+    "@angular/flex-layout": "^2.0.0-beta.9",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
     "@angular/material": "^2.0.0-beta.12",
@@ -33,11 +34,13 @@
     "circular-json": "^0.3.3",
     "core-js": "^2.4.1",
     "firebase": "^4.5.1",
+    "hammerjs": "^2.0.8",
+    "ng2-validation": "^4.2.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.5",
+    "@angular/cli": "^1.4.9",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/circular-json": "^0.1.31",
